Fixed bio vertical alignment.

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -1,17 +1,18 @@
 #bio {
   > div {
-    display: table;
+    // display: table;
+    @extend %valign;
 
     .info {
       width: 70%;
       padding-left: $spacing-unit;
     }
 
-    img,
-    .info {
-      display: table-cell;
-      vertical-align: middle;
-    }
+    // img,
+    // .info {
+    //   display: table-cell;
+    //   vertical-align: middle;
+    // }
   }
 }
 
